removing docker configuration

--- a/modular-structure/microservices/support/monitor-dashboard/src/main/resources/application.yml
+++ b/modular-structure/microservices/support/monitor-dashboard/src/main/resources/application.yml
@@ -12,8 +12,8 @@ server:
 
 logging:
   level:
-    ROOT: WARN
-    org.springframework.web: WARN
+    ROOT: INFO
+    org.springframework.web: DEBUG
 
 eureka:
   client:
@@ -35,29 +35,3 @@ eureka:
   instance:
     #Virtual host name by which the clients identifies this service
     virtualHostName: ${spring.application.name}
-
-
----
-# For deployment in Docker containers
-spring:
-  profiles: docker
-
-eureka:
-  instance:
-    hostname: monitor
-  client:
-    serviceUrl:
-      defaultZone: http://discovery:8761/eureka/
-
----
-# For deployment in Cloud Foundry
-spring:
-  profiles: cloud
-
-eureka:
-  instance:
-    hostname: ${vcap.application.uris[0]:localhost}
-    nonSecurePort: 80
-  client:
-    serviceUrl:
-      defaultZone: http://ml-public-ds-1.cfapps.io/eureka/
