--- a/modular-structure/microservices/support/auth-server/src/main/resources/application.properties
+++ b/modular-structure/microservices/support/auth-server/src/main/resources/application.properties
@@ -1,11 +1,4 @@
 server.port=9999
-server.ssl.key-store=classpath:server.jks
-server.ssl.key-store-password=password
-server.ssl.key-password=password
 server.contextPath=/uaa
-
 security.user.password=password
-
-info.component=OAuth Auth Server
-
-logging.level.org.springframework.security=WARN
+logging.level.org.springframework.security=DEBUG
