--- a/modular-structure/microservices/composite/product-composite-service/build.gradle
+++ b/modular-structure/microservices/composite/product-composite-service/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
-        springBootVersion = '1.2.2.RELEASE'
+        //Changed for spring boot 1.3.3
+        springBootVersion = '1.3.3.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -30,25 +31,43 @@ repositories {
         // Can't find spring-cloud-build in maven central...
         url 'http://maven.springframework.org/release'
     }
+    //Changed for spring boot 1.3.3
+    maven { url "https://repo.spring.io/snapshot" }
+	maven { url "https://repo.spring.io/milestone" }
 }
 
-
+//Changed for spring 1.3.3 and removed explicit assignment of versions to each dependency
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: 'spring-boot-starter-tomcat'
     }
     compile("org.springframework.boot:spring-boot-starter-undertow")
     compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile("org.springframework.cloud:spring-cloud-starter-hystrix:1.0.0.RELEASE")
-    compile("org.springframework.cloud:spring-cloud-starter-eureka:1.0.0.RELEASE")
-    compile("org.springframework.cloud:spring-cloud-starter-bus-amqp:1.0.0.RELEASE")
-    compile("org.springframework.cloud:spring-cloud-netflix-hystrix-amqp:1.0.0.RELEASE")
+    compile("org.springframework.cloud:spring-cloud-starter-hystrix")
+    compile("org.springframework.cloud:spring-cloud-starter-eureka")
+    compile("org.springframework.cloud:spring-cloud-starter-bus-amqp")
+    compile("org.springframework.cloud:spring-cloud-netflix-hystrix-amqp:1.0.7.RELEASE")
 
     compile("se.callista.microservises.core.product:product-service:0.0.1-SNAPSHOT")
     compile("se.callista.microservises.core.recommendation:recommendation-service:0.0.1-SNAPSHOT")
     compile("se.callista.microservises.core.review:review-service:0.0.1-SNAPSHOT")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
+}
+
+//Changed for spring boot 1.3.3
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.M5"
+	}
+}
+
+//Changed for spring boot 1.3.3
+eclipse {
+	classpath {
+		 containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+	}
 }
 
 task wrapper(type: Wrapper) {
