--- a/modular-structure/microservices/core/recommendation-service/build.gradle
+++ b/modular-structure/microservices/core/recommendation-service/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
-        springBootVersion = '1.2.2.RELEASE'
+        //Changed for spring boot 1.3.3
+        springBootVersion = '1.3.3.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -44,18 +45,37 @@ repositories {
         // Can't find spring-cloud-build in maven central...
         url 'http://maven.springframework.org/release'
     }
+    //Changed for spring boot 1.3.3
+    maven { url "https://repo.spring.io/snapshot" }
+	maven { url "https://repo.spring.io/milestone" }
 }
 
+//Changed for spring boot 1.3.3 and removed versions assigned explicitly
 dependencies {
     // TODO: Added ver no on the three core starter deps to make the maven plugin to work
-    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
+    compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: 'spring-boot-starter-tomcat'
     }
-    compile("org.springframework.boot:spring-boot-starter-undertow:${springBootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
-    compile("org.springframework.cloud:spring-cloud-starter-hystrix:1.0.0.RELEASE")
-    compile("org.springframework.cloud:spring-cloud-starter-eureka:1.0.0.RELEASE")
-    testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-undertow")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.springframework.cloud:spring-cloud-starter-hystrix")
+    compile("org.springframework.cloud:spring-cloud-starter-eureka")
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+}
+
+//Changed for spring boot 1.3.3
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.M5"
+	}
+}
+
+//Changed for spring boot 1.3.3
+eclipse {
+	classpath {
+		 containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+	}
 }
 
 task wrapper(type: Wrapper) {
