--- a/modular-structure/microservices/support/monitor-dashboard/build.gradle
+++ b/modular-structure/microservices/support/monitor-dashboard/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
-        springBootVersion = '1.2.2.RELEASE'
+        //Changed for spring 1.3.3
+        springBootVersion = '1.3.3.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -25,13 +26,37 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+	//Changed for spring 1.3.3
+	maven { url "https://repo.spring.io/snapshot" }
+	maven { url "https://repo.spring.io/milestone" }
 }
 
+//Changed for spring 1.3.3 and removed explicit assignment of versions to each dependency
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: 'spring-boot-starter-tomcat'
     }
     compile("org.springframework.boot:spring-boot-starter-undertow")
     compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile('org.springframework.cloud:spring-cloud-starter-hystrix-dashboard:1.0.0.RELEASE')
+    compile('org.springframework.cloud:spring-cloud-starter-hystrix-dashboard')
+}
+
+//Changed for spring 1.3.3
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.M5"
+	}
+}
+
+//Changed for spring 1.3.3
+eclipse {
+	classpath {
+		 containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+	}
+}
+
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.3'
 }
