--- a/modular-structure/microservices/support/auth-server/build.gradle
+++ b/modular-structure/microservices/support/auth-server/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
-        springBootVersion = '1.2.2.RELEASE'
+        //Changed for spring 1.3.3
+        springBootVersion = '1.3.3.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -25,8 +26,12 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    //Changed for spring 1.3.3
+	maven { url "https://repo.spring.io/snapshot" }
+	maven { url "https://repo.spring.io/milestone" }
 }
 
+//Changed for spring 1.3.3 and removed explicit assignment of versions to each dependency
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web') {
         exclude module: 'spring-boot-starter-tomcat'
@@ -35,7 +40,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-security")
 
-    compile("org.springframework.security.oauth:spring-security-oauth2:2.0.6.RELEASE")
+    compile("org.springframework.security.oauth:spring-security-oauth2:2.0.9.RELEASE")
 
     testCompile("org.springframework.boot:spring-boot-starter-test") {
         exclude(module: 'commons-logging')
