--- a/modular-structure/microservices/support/auth-server/src/main/resources/application.properties
+++ b/modular-structure/microservices/support/auth-server/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=9999
 server.contextPath=/uaa
 security.user.password=password
 logging.level.org.springframework.security=DEBUG
+
+security.oauth2.client.clientId: acme
+security.oauth2.client.clientSecret: acmesecret
+security.oauth2.client.authorized-grant-types: authorization_code,refresh_token,password
+security.oauth2.client.scope: openid
