Combined the core  and composite module into one

--- a/modular-structure/microservices/composite/product-composite-service/src/main/resources/application.yml
+++ b/modular-structure/microservices/composite/product-composite-service/src/main/resources/application.yml
@@ -16,6 +16,10 @@ eureka:
 #  ribbon:
 #    ServerListRefreshInterval: 1000
 
+service:
+  defaultMinMs: 100
+  defaultMaxMs: 200
+
 logging:
   level:
     se.callista: INFO
