--- a/modular-structure/microservices/core/recommendation-service/src/main/resources/application.yml
+++ b/modular-structure/microservices/core/recommendation-service/src/main/resources/application.yml
@@ -12,3 +12,7 @@ eureka:
       instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
   client:
     registryFetchIntervalSeconds: 5
+
+logging:
+  level:
+    se.callista: INFO
