--- a/modular-structure/microservices/support/auth-server/src/main/resources/application.properties
+++ b/modular-structure/microservices/support/auth-server/src/main/resources/application.properties
@@ -5,5 +5,5 @@ logging.level.org.springframework.security=DEBUG
 
 security.oauth2.client.clientId: acme
 security.oauth2.client.clientSecret: acmesecret
-security.oauth2.client.authorized-grant-types: authorization_code,refresh_token,password
-security.oauth2.client.scope: openid
+security.oauth2.client.authorized-grant-types: authorization_code,refresh_token,implicit,password,client_credentials
+security.oauth2.client.scope: webshop
