--- a/modular-structure/microservices/support/edge-server/src/main/resources/application.yml
+++ b/modular-structure/microservices/support/edge-server/src/main/resources/application.yml
@@ -4,10 +4,6 @@ server:
 info:
   component: Zuul Server
 
-spring:
-  oauth2:
-    resource:
-      userInfoUri: http://localhost:9999/uaa/user
 
 endpoints:
   restart:
@@ -19,9 +15,10 @@ endpoints:
 
 zuul:
   ignoredServices: "*"
-  prefix: /api
   routes:
-    productapi: /product/**
+    product: /productservice/**
+    recommendation: /recommendationservice/**
+    review: /reviewservice/**
 
 logging:
   level:
