Added new module position-service

--- a/modular-structure/microservices/support/edge-server/src/main/resources/application.yml
+++ b/modular-structure/microservices/support/edge-server/src/main/resources/application.yml
@@ -19,6 +19,7 @@ zuul:
     product: /productservice/**
     recommendation: /recommendationservice/**
     review: /reviewservice/**
+    positions: /positionservice/**
 
 logging:
   level:
