Added code for logs

--- a/modular-structure/microservices/core/positions-service/src/main/resources/application.properties
+++ b/modular-structure/microservices/core/positions-service/src/main/resources/application.properties
@@ -9,3 +9,6 @@ hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
 hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: com.globant.glow.staffing.model
+
+
+logging.file=application.log
