--- a/modular-structure/microservices/core/product-service/build.gradle
+++ b/modular-structure/microservices/core/product-service/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     compile("org.springframework.cloud:spring-cloud-starter-eureka")
     compile("org.springframework.cloud:spring-cloud-starter-bus-amqp")
 	compile("org.springframework.cloud:spring-cloud-netflix-hystrix-amqp:1.0.7.RELEASE")
-
+	compile('org.springframework.cloud:spring-cloud-config-client')
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
