--- a/modular-structure/microservices/core/positions-service/build.gradle
+++ b/modular-structure/microservices/core/positions-service/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     compile("org.springframework.cloud:spring-cloud-starter-bus-amqp")
 	compile("org.springframework.cloud:spring-cloud-netflix-hystrix-amqp:1.0.7.RELEASE")
 	compile('org.springframework.cloud:spring-cloud-config-client')
+	compile('org.springframework.cloud:spring-cloud-starter-config')
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
