--- a/modular-structure/microservices/core/positions-service/build.gradle
+++ b/modular-structure/microservices/core/positions-service/build.gradle
@@ -56,8 +56,30 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
         exclude module: 'spring-boot-starter-tomcat'
     }
+	compile('org.acegisecurity:acegi-security:1.0.7'){
+        exclude module: 'org.springframework:spring-aop'
+        exclude module: 'org.springframework:spring-beans'
+        exclude module: 'org.springframework:spring-context'
+        exclude module: 'org.springframework:spring-core'
+        exclude module: 'org.springframework:spring-dao'
+        exclude module: 'org.springframework:spring-jdbc'
+        exclude module: 'org.springframework:spring-mock'
+        exclude module: 'org.springframework:spring-remoting'
+        exclude module: 'org.springframework:spring-support'
+        exclude module: 'org.springframework:spring-web'
+        exclude module: 'org.springframework:spring-webmvc'
+    }
+
+    compile files('lib/glow-domain-entity-1.0-SNAPSHOT.jar')
+
+	compile('com.lowagie:itext:2.1.7'){
+        exclude module: 'bouncycastle:bctsp-jdk14'
+    }
+
+	compile('org.hibernate:hibernate-ehcache:5.1.0.Final')
+
     compile("org.springframework.boot:spring-boot-starter-undertow")
-    //compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.cloud:spring-cloud-starter-hystrix")
     compile("org.springframework.cloud:spring-cloud-starter-eureka")
     compile("org.springframework.boot:spring-boot-starter-data-jpa:1.2.2.RELEASE")
