Added glow-domain code

--- a/glow/microservices/core/positions-service/build.gradle
+++ b/glow/microservices/core/positions-service/build.gradle
@@ -54,16 +54,35 @@ repositories {
 dependencies {
     // TODO: Added ver no on the three core starter deps to make the maven plugin to work
     compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
-        exclude module: 'spring-boot-starter-tomcat'
+        //exclude module: 'spring-boot-starter-tomcat'
     }
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile("postgresql:postgresql:9.1-901-1.jdbc4")
+
+	compile('org.acegisecurity:acegi-security:1.0.4'){
+        exclude module: 'org.springframework:spring-aop'
+        exclude module: 'org.springframework:spring-beans'
+        exclude module: 'org.springframework:spring-context'
+        exclude module: 'org.springframework:spring-core'
+        exclude module: 'org.springframework:spring-dao'
+        exclude module: 'org.springframework:spring-jdbc'
+        exclude module: 'org.springframework:spring-mock'
+        exclude module: 'org.springframework:spring-remoting'
+        exclude module: 'org.springframework:spring-support'
+        exclude module: 'org.springframework:spring-web'
+        exclude module: 'org.springframework:spring-webmvc'
+    }
+	compile('com.lowagie:itext:2.1.7'){
+        exclude module: 'bouncycastle:bctsp-jdk14'
+    }
+
+    compile files('lib/glow-domain-entity-1.0-SNAPSHOT.jar')
 
 
     compile("org.springframework.boot:spring-boot-starter-undertow")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.cloud:spring-cloud-starter-hystrix")
     compile("org.springframework.cloud:spring-cloud-starter-eureka")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa:1.2.2.RELEASE")
-    compile("postgresql:postgresql:9.1-901-1.jdbc4")
     compile("org.springframework.cloud:spring-cloud-starter-bus-amqp")
 	compile("org.springframework.cloud:spring-cloud-netflix-hystrix-amqp:1.0.7.RELEASE")
 	compile('org.springframework.cloud:spring-cloud-config-client')
