--- a/glow/microservices/support/central-config-server/src/main/resources/config/positions.properties
+++ b/glow/microservices/support/central-config-server/src/main/resources/config/positions.properties
@@ -1,6 +1,6 @@
 # Database
 db.driver: org.postgresql.Driver
-db.url: jdbc:postgresql://localhost:5432/testdb
+db.url: jdbc:postgresql://localhost:5432/glow_dev
 db.username: postgres
 db.password: postgres
 
@@ -8,7 +8,7 @@ db.password: postgres
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
 hibernate.hbm2ddl.auto: update
-entitymanager.packagesToScan: com.globant.glow.staffing.model
+entitymanager.packagesToScan: com.globant.glow.core.domain
 
 
 logging.file=application.log
