--- a/modular-structure/microservices/core/positions-service/build.gradle
+++ b/modular-structure/microservices/core/positions-service/build.gradle
@@ -54,9 +54,12 @@ repositories {
 dependencies {
     // TODO: Added ver no on the three core starter deps to make the maven plugin to work
     compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
-        exclude module: 'spring-boot-starter-tomcat'
+        //exclude module: 'spring-boot-starter-tomcat'
     }
-	compile('org.acegisecurity:acegi-security:1.0.7'){
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile("postgresql:postgresql:9.1-901-1.jdbc4")
+
+	compile('org.acegisecurity:acegi-security:1.0.4'){
         exclude module: 'org.springframework:spring-aop'
         exclude module: 'org.springframework:spring-beans'
         exclude module: 'org.springframework:spring-context'
@@ -69,21 +72,17 @@ dependencies {
         exclude module: 'org.springframework:spring-web'
         exclude module: 'org.springframework:spring-webmvc'
     }
-
-    compile files('lib/glow-domain-entity-1.0-SNAPSHOT.jar')
-
 	compile('com.lowagie:itext:2.1.7'){
         exclude module: 'bouncycastle:bctsp-jdk14'
     }
 
-	compile('org.hibernate:hibernate-ehcache:5.1.0.Final')
+    compile files('lib/glow-domain-entity-1.0-SNAPSHOT.jar')
+
 
     compile("org.springframework.boot:spring-boot-starter-undertow")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.cloud:spring-cloud-starter-hystrix")
     compile("org.springframework.cloud:spring-cloud-starter-eureka")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa:1.2.2.RELEASE")
-    compile("postgresql:postgresql:9.1-901-1.jdbc4")
     compile("org.springframework.cloud:spring-cloud-starter-bus-amqp")
 	compile("org.springframework.cloud:spring-cloud-netflix-hystrix-amqp:1.0.7.RELEASE")
 	compile('org.springframework.cloud:spring-cloud-config-client')
