--- a/modular-structure/microservices/core/positions-service/src/main/resources/application.properties
+++ b/modular-structure/microservices/core/positions-service/src/main/resources/application.properties
@@ -7,8 +7,7 @@ db.password: postgres
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: update
+hibernate.hbm2ddl.auto: none
 entitymanager.packagesToScan: com.globant.glow.core.domain
-spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 
 logging.file=application.log
