--- a/glow/microservices/support/central-config-server/src/main/resources/config/users.properties
+++ b/glow/microservices/support/central-config-server/src/main/resources/config/users.properties
@@ -7,7 +7,7 @@ db.password: postgres
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: update
+hibernate.hbm2ddl.auto: none
 entitymanager.packagesToScan: com.globant.glow.core.domain
 
 
