Added new module for globers

--- a/glow/microservices/support/edge-server/src/main/resources/application.yml
+++ b/glow/microservices/support/edge-server/src/main/resources/application.yml
@@ -18,6 +18,7 @@ zuul:
   routes:
     positions: /positionservice/**
     users: /userservice/**
+    globers: /globerservice/**
 
 logging:
   level:
