Added for dynamic data of globers

--- a/glow/microservices/support/edge-server/src/main/resources/application.yml
+++ b/glow/microservices/support/edge-server/src/main/resources/application.yml
@@ -14,11 +14,12 @@ endpoints:
     sensitive: false
 
 zuul:
+  prefix: /glow
   ignoredServices: "*"
   routes:
-    positions: /positionservice/**
     users: /userservice/**
     globers: /globerservice/**
+    positions: /positionservice/**
 
 logging:
   level:
